cargo-workspaces/tests/snapshots/publish__dry_run_single.snap
---
source: tests/publish.rs
expression: err
---
warn Dry run doesn't check that all dependencies have been published. 
warn Dry run doesn't perform versioning. 
info checking simple
info success ok
